# autom

./: README.md  pyproject.toml
autom/: __init__.py  bot.py  cli.py
