[project]
name = "autom"
version = "0.1.0"
description = "Command-executing AI bot using OpenAI Responses API"
authors = [{name = "AI Assistant"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.3.5",
    "typer>=0.9.0",
]

[project.scripts]
autom = "autom.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
